--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,33 +1,32 @@
-<div class="container col-12 fade-in top">
-  <div class="img-div">
-    <img class="main-img col-12" src="./assets/ben8.jpg" />
+<div class="container fade-in">
+  <div>
+    <h1 class="title">Ben Eisenberger</h1>
+    <p>
+      Omaha, Nebraska-based guitarist, software developer, songwriter, amateur
+      podcaster, etc
+    </p>
+    <h2 class="subtitle">New Releases</h2>
+    <p>
+      <a href="">Soloists</a> out December 2020 on
+      <a href="">Plastic Miracles</a>
+    </p>
+    <p><a href="">Three Islands</a> self-released in March 2018</p>
+    <p>
+      <a href="">Screaming Plastic</a> recipient of a New Music USA project
+      grant
+    </p>
+    <h2 class="subtitle">Stack</h2>
+    <p>
+      <b class="mini-title">Front</b>
+      Angular 8/9/10/11, Ionic 3/4/5, Flutter
+    </p>
+    <p>
+      <b class="mini-title">UI</b>
+      Bootstrap, Material Design (Angular Material), Ant Design of Angular
+    </p>
+    <p>
+      <b class="mini-title">Back</b>
+      Google Firebase/Firestore/Cloud Platform Funtions, Docker, PostgreSQL
+    </p>
   </div>
-
-  <section>
-    <div class="bio">
-      <p>
-        Omaha, Nebraska-based guitarist, songwriter, web developer, and a
-        graduate of both the University of Nebraska at Omaha’s classical guitar
-        program and the Midland University Code Academy. My debut solo release
-        <a href="http://beneisenberger.bandcamp.com/album/three-islands"
-          >Three Islands</a
-        >, a collection of warm and pensive acoustic songs, was released on
-        April 24th, 2018<br /><br />
-        In 2015, I co-founded the experimental collective Screaming Plastic,
-        which has released two cassettes of live improvisations and whose debut
-        album was funded by a
-        <a href="https://www.newmusicusa.org/projects/screaming-plastic/"
-          >New Music USA</a
-        >
-        grant. <br /><br />
-        Stack: Angular 6+, HTML5, CSS, JavaScript/TypeScript, SQL, Ionic,
-        Bootstrap, Material Design, Ant Design, Firebase/Firestore, NodeJS,
-        Express.
-        <br /><br />
-        In addition to original music, I also do contracted work for musicals,
-        choirs, and weddings, teach private lessons, and spend my free time
-        dreaming up new coding projects and collaborating with other developers.
-      </p>
-    </div>
-  </section>
 </div>
