--- a/src/app/media/media.component.html
+++ b/src/app/media/media.component.html
@@ -1,34 +1,36 @@
-<div class="container col-12 fade-in">
-  <h2 class="center title">Music</h2>
+<div class="container fade-in">
+  <div>
+    <h1 class="title">Music</h1>
 
-  <section
-    class="music-embed row"
-    *ngFor="let music of music"
-    [style.background-image]="'url(' + music.backgroundImage + ')'"
-  >
-    <div class="col-12 artist">
-      <h3>
-        <b>{{ music.artist }}</b>
-      </h3>
-      <p>{{ music.description }}</p>
-      <h3><b>Releases:</b></h3>
-      <p *ngFor="let release of music.releases">{{ release }}</p>
+    <section
+      class="row"
+      *ngFor="let music of music"
+      [style.background-image]="'url(' + music.backgroundImage + ')'"
+    >
+      <div class="col-12">
+        <h3>
+          <b>{{ music.artist }}</b>
+        </h3>
+        <p>{{ music.description }}</p>
+        <h3><b>Releases:</b></h3>
+        <p *ngFor="let release of music.releases">{{ release }}</p>
 
-      <a class="icon" href="{{ music.social.spotify }}"
-        ><mdb-icon fab icon="spotify"></mdb-icon
-      ></a>
-      <a class="icon" href="{{ music.social.apple }}"
-        ><mdb-icon fab icon="itunes"></mdb-icon
-      ></a>
-      <a class="icon" href="{{ music.social.bandcamp }}"
-        ><mdb-icon fab icon="bandcamp"></mdb-icon
-      ></a>
-      <a
-        style="margin-bottom: 200px;"
-        class="icon"
-        href="{{ music.social.discogs }}"
-        ><mdb-icon fas icon="dot-circle"></mdb-icon
-      ></a>
-    </div>
-  </section>
+        <a class="icon" href="{{ music.social.spotify }}"
+          ><mdb-icon fab icon="spotify"></mdb-icon
+        ></a>
+        <a class="icon" href="{{ music.social.apple }}"
+          ><mdb-icon fab icon="itunes"></mdb-icon
+        ></a>
+        <a class="icon" href="{{ music.social.bandcamp }}"
+          ><mdb-icon fab icon="bandcamp"></mdb-icon
+        ></a>
+        <a
+          style="margin-bottom: 200px"
+          class="icon"
+          href="{{ music.social.discogs }}"
+          ><mdb-icon fas icon="dot-circle"></mdb-icon
+        ></a>
+      </div>
+    </section>
+  </div>
 </div>
