--- a/src/app/menu/footer/footer.component.scss
+++ b/src/app/menu/footer/footer.component.scss
@@ -1,8 +1,8 @@
 footer {
-  background-color: #648061;
+  background-color: black;
 }
 
 a {
-  color: #d1dde0 !important;
+  color: white !important;
   width: 30px;
 }
