--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,28 +1,11 @@
-<div class="container col-12 fade-in top">
-  <h2 class="title center">Contact</h2>
-  <mat-form-field>
-    <input
-      matInput
-      placeholder="Enter your email"
-      [formControl]="email"
-      required
-    />
-    <mat-error *ngIf="email.invalid">{{ getErrorMessage() }}</mat-error>
-  </mat-form-field>
-  <br />
-  <mat-checkbox ng-checked="true" [(ngModel)]="checked"
-    >Join my email list?</mat-checkbox
-  >
-
-  <mat-form-field>
-    <input matInput placeholder="Name" [(ngModel)]="name" />
-  </mat-form-field>
-
-  <mat-form-field>
-    <textarea matInput placeholder="Message" [(ngModel)]="message"></textarea>
-  </mat-form-field>
-
-  <button mat-button (click)="submit(email, checked, name, message)">
-    Submit
-  </button>
+<div class="container fade-in">
+  <div>
+    <h1 class="title">Contact</h1>
+    <h2 class="subtitle">Personal</h2>
+    <p>ben.eisenberger@gmail.com</p>
+    <h2 class="subtitle">Distribution</h2>
+    <p>healthinspectorrecords@gmail.com</p>
+    <h2 class="subtitle">Podcast</h2>
+    <p>circleandsquarepodcast@gmail.com</p>
+  </div>
 </div>
