--- a/src/app/events/events.component.scss
+++ b/src/app/events/events.component.scss
@@ -1,37 +1,3 @@
-h3 {
-  text-align: center;
-  margin: 20px;
-}
-
-p {
-  margin-left: 50px;
-  margin-right: 50px;
-}
-
-.container {
-  padding-bottom: 20px;
-  min-height: 100vh;
-  max-width: 700px;
-}
-
-.years {
-  box-shadow: none !important;
-}
-
-.nav-item a {
-  color: #0e1720 !important;
-}
-
-.active a {
-  color: #d1dde0 !important;
-}
-
-.page {
-  margin-bottom: 150px;
-}
-
-.events-container {
-  display: flex; 
-  justify-content: space-between;
-  margin-bottom: 40px;
+.events-container a {
+  margin-right: 10px;
 }
