--- a/src/app/events/y2020/y2020.component.html
+++ b/src/app/events/y2020/y2020.component.html
@@ -9,8 +9,20 @@
   Repertory Theater
 </p>
 <p>
-  Contracted Guitarist for Penguin Problems @ The Rose Theater (pandemic, dates varried)
+  Contracted Guitarist for Penguin Problems @ The Rose Theater (pandemic, dates
+  varried)
 </p>
 <p>
-  11/16/20 - Ben Eisenberger w/ Oceanator, Sonny Falls, Calyx, Alex Joseph (Livestream for Plastic Miracles)
+  11/16/20 - Ben Eisenberger w/ Oceanator, Sonny Falls, Calyx, Alex Joseph
+  (Livestream for Plastic Miracles)
+</p>
+<p>
+  11/27/20 - Ben Eisenberger Livestream for Around the Campfire Black Friday
+</p>
+<p>
+  12/11/20 - Ben Eisenberger "Soloists" Release Livestream w/ Ryan Menchaca, Tom
+  Bartolomei, B.B. Sledge
+  <a href="https://www.youtube.com/watch?v=5y138zQTfzQ"
+    >https://www.youtube.com/watch?v=5y138zQTfzQ</a
+  >
 </p>
