--- a/src/app/media/media.component.scss
+++ b/src/app/media/media.component.scss
@@ -12,10 +12,11 @@ section {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-color: rgba(255, 255, 255, 0.7);
-  background-blend-mode: lighten;
+  background-color: rgba(0, 0, 0, 0.7);
+  background-blend-mode: darken;
   margin: 30px 0;
-  color: #0e1720;
+  color: white;
+  border: 2px inset grey;
 }
 
 section:nth-child(5) {
